@@ -41,6 +41,7 @@ TODO_CODECS_BASIC_TABLE+=inter/LOWER
 TODO_CODECS_BASIC_TABLE+=inter/MAC
 TODO_CODECS_BASIC_TABLE+=inter/NL2BR
 TODO_CODECS_BASIC_TABLE+=inter/NORMAL_SCORE
+TODO_CODECS_BASIC_TABLE+=inter/SCORE_TRAIN
 TODO_CODECS_BASIC_TABLE+=inter/TO_ALIAS
 TODO_CODECS_BASIC_TABLE+=inter/UNIX
 TODO_CODECS_BASIC_TABLE+=inter/UPPER
@@ -117,6 +118,7 @@ TODO_CODECS_BASIC_CALLBACK+=inter/AMBIGUOUS-PAD
 TODO_CODECS_BASIC_CALLBACK+=inter/AMBIGUOUS-UNPAD
 TODO_CODECS_BASIC_CALLBACK+=inter/BIG5-DEFRAG
 TODO_CODECS_BASIC_CALLBACK+=inter/NORMAL_SCORE
+TODO_CODECS_BASIC_CALLBACK+=inter/SCORE_TRAIN
 TODO_CODECS_BASIC_CALLBACK+=to/3F
 TODO_CODECS_BASIC_CALLBACK+=to/ANSI-CONTROL
 TODO_CODECS_BASIC_CALLBACK+=to/ASCII-ESCAPED-UNICODE
