@@ -1,5 +1,6 @@
 5.0:
 	inter/NORMAL_SCORE
+	inter/SCORE_TRAIN
 	refactor bsdconv_create()
 	add bsdconv_insert_phase()
 	add bsdconv_insert_codec()
